# usm

./: .gitignore  README.md  __init__.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
bundle/: io.py
core/: model.py
docs/: API.md  DATA_MODEL.md  DESIGN.md  EXAMPLES.md  LIMITS.md  MOLSAIC_V2_DESIGN.md  PERFORMANCE.md  WORKFLOWS.md
io/: __init__.py  _cif_parser.py  _mdf_parser.py  car.py  cif.py  loader.py  mdf.py  pdb.py
ops/: _canonicalize.py  cell.py  collide.py  compose.py  edit.py  frames.py  graft.py  graft_ops.py  label.py  lattice.py  mdf_conn_preserve.py  merge.py  normalize.py  parameterset.py  renumber.py  replicate.py  requirements.py  select.py  selection.py  sites.py  termset.py  topology.py  transform.py
tests/: test_auto_load.py  test_cif_enhanced.py  test_coord_normalize.py  test_merge_unique_names.py  test_parameterset_derivation.py  test_pbc_core.py  test_pbc_replication.py  test_pbc_topology.py  test_pdb_io.py  test_requirements_derivation.py  test_selection_ops.py  test_termset_derivation.py
