[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usm"
version = "2.0.0a0"
description = "Unified Structure Model (USM) — atomistic structure I/O and manipulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.setuptools]
package-dir = {"usm" = ".", "usm.core" = "core", "usm.io" = "io", "usm.ops" = "ops", "usm.bundle" = "bundle"}
packages = ["usm", "usm.core", "usm.io", "usm.ops", "usm.bundle"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F"]
